add lint file
